--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -4,7 +4,8 @@ spring:
     port: 5672
     username: ${RABBITMQ_USERNAME}
     password: ${RABBITMQ_PASSWORD}
-
+  elasticsearch:
+    uris: http://localhost:9200
 rabbitmq:
   exchange:
     name: cm-book-exchange
@@ -15,3 +16,8 @@ rabbitmq:
       routing-key: cm-book-key-2
     - name: cm-book-3
       routing-key: cm-book-key-3
+
+ollama:
+  api:
+    url: ${OLLAMA_API_URL}
+
