--- a/src/main/resources/elasticsearch/mappings/books-mapping.json
+++ b/src/main/resources/elasticsearch/mappings/books-mapping.json
@@ -39,6 +39,8 @@
       "similarity": "cosine"
     },
     "publicationDatetime": { "type": "date" },
-    "createdAt": { "type": "date" }
+    "createdAt": { "type": "date" },
+    "updateAt": { "type": "date" }
+
   }
 }
