feat : book문서 이미지 추가 , 임베딩 타입 float -> Float 수정 , 빈 사이클 도는거 수정

--- a/src/main/resources/elasticsearch/mappings/books-mapping.json
+++ b/src/main/resources/elasticsearch/mappings/books-mapping.json
@@ -32,6 +32,7 @@
         "keyword": { "type": "keyword", "normalizer": "lowercase_normalizer" }
       }
     },
+    "bookImages": { "type": "keyword" },
     "embedding": {
       "type": "dense_vector",
       "dims": 1024,
