feat : yml dev , prod 엘라스틱서치 설정 추가

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -5,7 +5,9 @@ spring:
     username: ${RABBITMQ_USERNAME}
     password: ${RABBITMQ_PASSWORD}
   elasticsearch:
-    uris: http://localhost:9200
+    uris: ${ES_URL}
+    username: ${ES_USERNAME}
+    password: ${ES_PASSWORD}
 rabbitmq:
   exchange:
     name: cm-book-exchange
