feat : 검색결과 ai llm요청 반환

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -8,6 +8,15 @@ spring:
     uris: ${ES_URL}
     username: ${ES_USERNAME}
     password: ${ES_PASSWORD}
+  ai:
+    vertex:
+      ai:
+        gemini:
+          project-id: ${GCP_PROJECT_ID}
+          location: asia-northeast3
+          chat:
+            options:
+              model: gemini-2.5-flash
 
 
 rabbitmq:
