--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -23,13 +23,8 @@ rabbitmq:
   exchange:
     name: cm-book-exchange
   queues:
-    - name: cm-book-1
-      routing-key: cm-book-key-1
-    - name: cm-book-2
-      routing-key: cm-book-key-2
-    - name: cm-book-3
-      routing-key: cm-book-key-3
-
+    queue-names:  cm-book-1, cm-book-2, cm-book-3
+    routing-keys:  cm-book-key-1, cm-book-key-2, cm-book-key-3
 ollama:
   api:
     url: ${OLLAMA_API_URL}
