Eureka 환경구성 완료

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
+      SPRING_PROFILES_ACTIVE: prod
       DOMAIN: ${{ secrets.DOMAIN_NAME }}
       PORT: ${{ secrets.PORT_NUMBER }}
       EUREKA_URL_PROD: ${{ secrets.EUREKA_URL_PROD }}
@@ -51,7 +52,8 @@ jobs:
             -Dsonar.projectKey=chaekmate-search \
             -Dsonar.projectName="chaekmate-search" \
             -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }}  \
+            -Dsonar.coverage.jacoco.xmlReportPaths=api/target/site/jacoco/jacoco.xml
 
       # Step.6 JAR 파일 이름 변경
       - name: Rename JAR File
