--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,7 +16,7 @@ jobs:
       DOMAIN: ${{ secrets.DOMAIN_NAME }}
       PORT: ${{ secrets.PORT_NUMBER }}
       ES_URL: ${{ secrets.ES_URL }}
-      ES_USERNAME: ${{ secrets.ES_USERNAME }}adf
+      ES_USERNAME: ${{ secrets.ES_USERNAME }}
       ES_PASSWORD: ${{ secrets.ES_PASSWORD }}
       OLLAMA_API_URL: ${{ secrets.OLLAMA_API_URL }}
       RABBITMQ_HOST: ${{ secrets.RABBITMQ_HOST }}
