--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -22,9 +22,9 @@ spring:
   data:
     redis:
       host: ${REDIS_HOST}
-      port: 6379
       password: ${REDIS_PASSWORD}
-      database: 309
+      port: ${REDIS_PORT:6379}
+      database: ${REDIS_RANGE:303}
   ai:
     vertex:
       ai:
