--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -20,9 +20,9 @@ spring:
   data:
     redis:
       host: ${REDIS_HOST}
-      port: 6379
       password: ${REDIS_PASSWORD}
-      database: 309
+      port: ${REDIS_PORT:6379}
+      database: ${REDIS_RANGE:303}
 rabbitmq:
   exchange:
     name: cm-book-exchange
