fix: ci-cd 포트넘버 환경변수 이름 수정

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -99,5 +99,5 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           script: |
             export DOMAIN="${{ env.DOMAIN }}"
-            export PORT="${{ env.PORT }}"
+            export PORT_NUMBER="${{ env.PORT_NUMBER }}"
             bash -lc ./startup.sh
