chore: ci-cd.yml 환경변수명 수정

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,7 +13,7 @@ jobs:
 
     env:
       SPRING_PROFILES_ACTIVE: prod
-      DOMAIN: ${{ secrets.DOMAIN_NAME }}
+      DOMAIN_NAME: ${{ secrets.DOMAIN_NAME }}
       PORT_NUMBER: ${{ secrets.PORT_NUMBER }}
       ES_URL: ${{ secrets.ES_URL }}
       ES_USERNAME: ${{ secrets.ES_USERNAME }}
@@ -72,7 +72,7 @@ jobs:
       - name: Rename JAR File
         run: |
           TIMESTAMP=$(TZ="Asia/Seoul" date +%Y%m%d-%H%M%S)
-          NEW_JAR_NAME="${DOMAIN}-${TIMESTAMP}.jar"
+          NEW_JAR_NAME="${DOMAIN_NAME}-${TIMESTAMP}.jar"
           mv target/*.jar target/$NEW_JAR_NAME
           echo "NEW_JAR_NAME=$NEW_JAR_NAME" >> $GITHUB_ENV
 
@@ -85,7 +85,7 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
           source: "target/${{ env.NEW_JAR_NAME }}"
-          target: "/home/backend/be11-team1/${{ env.DOMAIN }}/"
+          target: "/home/backend/be11-team1/${{ secrets.DOMAIN_NAME }}/"
           strip_components: 1 # 폴더 구조 무시하고 파일만 업로드
           rm: false # 기존 파일 (중복 파일) 존재 시 덮어쓰기
 
@@ -98,6 +98,6 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            export DOMAIN="${{ env.DOMAIN }}"
-            export PORT_NUMBER="${{ env.PORT_NUMBER }}"
+            export DOMAIN_NAME="${{ secrets.DOMAIN_NAME }}"
+            export PORT_NUMBER="${{ secrets.PORT_NUMBER }}"
             bash -lc ./startup.sh
