--- a/src/main/resources/elasticsearch/mappings/books-mapping.json
+++ b/src/main/resources/elasticsearch/mappings/books-mapping.json
@@ -16,7 +16,15 @@
         "keyword": { "type": "keyword", "normalizer": "lowercase_normalizer" }
       }
     },
-    "price": { "type": "scaled_float", "scaling_factor": 100 },
+    "isbn": { "type": "keyword" },
+    "publisher": {
+      "type": "text",
+      "analyzer": "korean_english_analyzer",
+      "fields": {
+        "keyword": { "type": "keyword", "normalizer": "lowercase_normalizer" }
+      }
+    },
+    "price": { "type": "integer" },
     "description": { "type": "text", "analyzer": "korean_english_analyzer" },
     "categories": {
       "type": "text",
@@ -33,6 +41,9 @@
       }
     },
     "bookImages": { "type": "keyword" },
+    "rating": { "type": "double" },
+    "reviewSummary": { "type": "text", "analyzer": "korean_english_analyzer" },
+    "reviewCnt": { "type": "integer" },
     "embedding": {
       "type": "dense_vector",
       "dims": 1024,
@@ -41,7 +52,6 @@
     },
     "publicationDatetime": { "type": "date" },
     "createdAt": { "type": "date" },
-    "updateAt": { "type": "date" }
-
+    "updatedAt": { "type": "date" }
   }
 }
