feat : 통합테스트 주석처리

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,13 +1,21 @@
 spring:
   rabbitmq:
-    host: ${RABBITMQ_HOST}
+    host: test
     port: 5672
-    username: ${RABBITMQ_USERNAME}
-    password: ${RABBITMQ_PASSWORD}
+    username: test
+    password: test
+
   elasticsearch:
-    uris: ${ES_URL}
-    username: ${ES_USERNAME}
-    password: ${ES_PASSWORD}
+    uris: test
+    username: test
+    password: test
+  data:
+    redis:
+      host: test
+      password: test
+      port: ${REDIS_PORT:6379}
+      database: ${REDIS_RANGE:303}
+
   ai:
     vertex:
       ai:
@@ -17,24 +25,18 @@ spring:
           chat:
             options:
               model: gemini-2.5-flash
-  data:
-    redis:
-      host: ${REDIS_HOST}
-      password: ${REDIS_PASSWORD}
-      port: ${REDIS_PORT:6379}
-      database: ${REDIS_RANGE:303}
+ollama:
+  api:
+    url: localhost
+
+rerank:
+  api:
+    url: localhost
+
+
 rabbitmq:
   exchange:
     name: cm-book-exchange
   queues:
-    queue-names:  cm-test-book-1, cm-test-book-2, cm-test-book-3
-    routing-keys:  cm-test-book-key-1, cm-test-book-key-2, cm-test-book-key-3
-
-
-ollama:
-  api:
-    url: ${OLLAMA_API_URL}
-
-rerank:
-  api:
-    url: ${RERANK_API_URL}
+    queue-names:  cm-book-1, cm-book-2, cm-book-3
+    routing-keys:  cm-book-key-1, cm-book-key-2, cm-book-key-3
