--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -8,3 +8,45 @@ eureka:
     service-url:
       defaultZone: http://chaekmate:1234@localhost:8761/eureka
 
+spring:
+  rabbitmq:
+    host: ${RABBITMQ_HOST}
+    port: 5672
+    username: ${RABBITMQ_USERNAME}
+    password: ${RABBITMQ_PASSWORD}
+
+  elasticsearch:
+    uris: ${ES_URL}
+    username: ${ES_USERNAME}
+    password: ${ES_PASSWORD}
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      password: ${REDIS_PASSWORD}
+      port: ${REDIS_PORT:6379}
+      database: ${REDIS_RANGE:303}
+  ai:
+    vertex:
+      ai:
+        gemini:
+          project-id: ${GCP_PROJECT_ID}
+          location: asia-northeast1
+          chat:
+            options:
+              model: gemini-2.5-flash
+
+
+rabbitmq:
+  exchange:
+    name: cm-book-exchange
+  queues:
+    queue-names:  cm-book-1, cm-book-2, cm-book-3
+    routing-keys:  cm-book-key-1, cm-book-key-2, cm-book-key-3
+
+ollama:
+  api:
+    url: ${OLLAMA_API_URL}
+
+rerank:
+  api:
+    url: ${RERANK_API_URL}
