--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -10,6 +10,49 @@ eureka:
     service-url:
       defaultZone: ${EUREKA_URL_PROD}
 
+spring:
+  rabbitmq:
+    host: ${RABBITMQ_HOST}
+    port: 5672
+    username: ${RABBITMQ_USERNAME}
+    password: ${RABBITMQ_PASSWORD}
+  ai:
+    vertex:
+      ai:
+        gemini:
+          project-id: ${GCP_PROJECT_ID}
+          location: asia-northeast1
+          chat:
+            options:
+              model: gemini-2.5-flash
+  elasticsearch:
+    uris: ${ES_URL}
+    username: ${ES_USERNAME}
+    password: ${ES_PASSWORD}
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      password: ${REDIS_PASSWORD}
+      port: ${REDIS_PORT:6379}
+      database: ${REDIS_RANGE:303}
+rabbitmq:
+  exchange:
+    name: cm-book-exchange
+  queues:
+    - name: cm-book-1
+      routing-key: cm-book-key-1
+    - name: cm-book-2
+      routing-key: cm-book-key-2
+    - name: cm-book-3
+      routing-key: cm-book-key-3
+
+ollama:
+  api:
+    url: ${OLLAMA_API_URL}
+
+rerank:
+  api:
+    url: ${RERANK_API_URL}
 
 logging:
   level:
