--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -38,5 +38,14 @@ rabbitmq:
   exchange:
     name: cm-book-exchange
   queues:
-    queue-names:  cm-book-1, cm-book-2, cm-book-3
-    routing-keys:  cm-book-key-1, cm-book-key-2, cm-book-key-3
+    queue-names:  cm-test-book-1, cm-test-book-2, cm-test-book-3
+    routing-keys:  cm-test-book-key-1, cm-test-book-key-2, cm-test-book-key-3
+
+
+ollama:
+  api:
+    url: ${OLLAMA_API_URL}
+
+rerank:
+  api:
+    url: ${RERANK_API_URL}
