feat : 인서트 업데이트 동시에 들어왔을때 인서트 아직 안됬는데 업데이트 처리하는거 수정

--- a/src/main/resources/elasticsearch/mappings/books-mapping.json
+++ b/src/main/resources/elasticsearch/mappings/books-mapping.json
@@ -50,8 +50,6 @@
       "index": true,
       "similarity": "cosine"
     },
-    "publicationDatetime": { "type": "date" },
-    "createdAt": { "type": "date" },
-    "updatedAt": { "type": "date" }
+    "publicationDatetime": { "type": "date" }
   }
 }
