--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -9,6 +9,9 @@ eureka:
       defaultZone: http://chaekmate:1234@localhost:8761/eureka
 
 spring:
+  application:
+    name: chaekmate-search
+
   rabbitmq:
     host: ${RABBITMQ_HOST}
     port: 5672
@@ -40,8 +43,8 @@ rabbitmq:
   exchange:
     name: cm-book-exchange
   queues:
-    queue-names:  cm-book-1, cm-book-2, cm-book-3
-    routing-keys:  cm-book-key-1, cm-book-key-2, cm-book-key-3
+    queue-names:  cm-book-1, cm-book-2
+    routing-keys:  cm-book-key-1, cm-book-key-2
 
 ollama:
   api:
