--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,8 +41,8 @@ rabbitmq:
   exchange:
     name: cm-book-exchange
   queues:
-    queue-names:  cm-book-1, cm-book-2, cm-book-3
-    routing-keys:  cm-book-key-1, cm-book-key-2, cm-book-key-3
+    queue-names:  cm-book-1, cm-book-2
+    routing-keys:  cm-book-key-1, cm-book-key-2
 
 ollama:
   api:
