feat: 이중화, 무중단 반영

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -126,4 +126,4 @@ jobs:
             export REDIS_RANGE="${{ secrets.REDIS_RANGE }}"
             export EUREKA_URL_PROD="${{ secrets.EUREKA_URL_PROD }}"
             export RERANK_API_URL="${{ secrets.RERANK_API_URL }}"
-            bash -lc ./startup.sh
+            bash -lc ./startup-single.sh
