feat: logstash 설정

--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,13 @@
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
 
+        <!-- 로그 중앙화 -->
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>8.0</version>
+        </dependency>
+
         <!-- 컨트롤러에 직접 로그 안 찍어도 되는 의존성 -->
         <dependency>
             <groupId>io.micrometer</groupId>
